# UnInstall

./: .gitignore  CMakeLists.txt  DlgBuilder.hpp  EPlugin.cpp  README.md  ReadMe.Rus.txt  UnInstall.cpp  UnInstall.hpp  UnInstall_Eng.hlf  UnInstall_Rus.hlf  WhatsNew.Rus.txt  makefile  project.ini  vc.build.release.bat
src/: CMakeLists.txt  DlgBuilder.hpp  EPlugin.cpp  File_ID.diz  Registry.cpp  UnInstall.cpp  UnInstall.def  UnInstall.hpp  UnInstall_Eng.hlf  UnInstall_Rus.hlf  version.hpp
tools/: vc.build.release.bat
